Add Vercel deployment configuration and guides
- Add vercel.json for frontend deployment
- Add comprehensive deployment documentation (7 guides)
- Update SecurityConfig with dynamic CORS configuration
- Update frontend config for environment variables
- Add automated deployment script (deploy-vercel.bat)
- Updated README with deployment quick start